--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        project: [Ao.Cache.sln]
+        project: [UnionType.sln]
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET
