--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Build
       run: dotnet build --no-restore 
     - name: Test
-      run: dotnet test --no-restore 
+      run: dotnet test --no-restore -f net6.0
