--- a/test/UnionType.Test/UnionType.Test.csproj
+++ b/test/UnionType.Test/UnionType.Test.csproj
@@ -7,6 +7,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <IsPackable>false</IsPackable>
     <LangVersion>latest</LangVersion>
+    <NoWarn>$(NoWarn);CS1718;</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
