--- a/src/UnionType/UnionType.csproj
+++ b/src/UnionType/UnionType.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>10.0</LangVersion>
-    <Version>1.2.0</Version>
+    <Version>1.3.0-preview.1</Version>
     <RepositoryUrl>https://github.com/Cricle/UnionType</RepositoryUrl>
     <PackageTags>union;type;</PackageTags>
     <Description>An union type for c#</Description>
