--- a/src/UnionType/UnionType.csproj
+++ b/src/UnionType/UnionType.csproj
@@ -5,10 +5,13 @@
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>10.0</LangVersion>
-    <Version>1.3.0-preview.2</Version>
+    <Version>1.3.0</Version>
     <RepositoryUrl>https://github.com/Cricle/UnionType</RepositoryUrl>
     <PackageTags>union;type;</PackageTags>
-    <Description>An union type for c#</Description>
+    <Description>
+      An union type for c#.
+      Powerful, low consumption, and highly scalable type for c#.
+    </Description>
     <Authors>HCricle</Authors>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
