--- a/src/UnionType/UnionType.csproj
+++ b/src/UnionType/UnionType.csproj
@@ -7,6 +7,7 @@
     <LangVersion>10.0</LangVersion>
     <Version>1.3.3</Version>
     <RepositoryUrl>https://github.com/Cricle/UnionType</RepositoryUrl>
+    <RepositoryType>https://github.com/Cricle/UnionType</RepositoryType>
     <PackageTags>union;type;</PackageTags>
     <Description>
       An union type for c#.
