--- a/test/UnionType.Benchmarks/UnionType.Benchmarks.csproj
+++ b/test/UnionType.Benchmarks/UnionType.Benchmarks.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.2" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
