--- a/src/UnionType/UnionType.csproj
+++ b/src/UnionType/UnionType.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net6.0;net8.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>10.0</LangVersion>
-    <Version>1.4.0</Version>
+    <Version>1.5.0</Version>
     <RepositoryUrl>https://github.com/Cricle/UnionType</RepositoryUrl>
     <RepositoryType>https://github.com/Cricle/UnionType</RepositoryType>
     <PackageTags>union;type;</PackageTags>
@@ -29,6 +29,7 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+	  <InternalsVisibleTo Include="UnionType.Test"/>
   </ItemGroup>
 
 </Project>
